update page for load message